# baion-std

./: .gitignore  CHANGELOG.md  README.md  build_all.sh  conformance_reference.json  verify_all_lineages.sh
.github/workflows/: verify.yml
c/: .clang-format  CMakeLists.txt  Makefile
c/include/baion/: canonical_json.h  public_types.h  sha256.h
c/src/: canonical_json.c  sha256.c
c/tests/: CMakeLists.txt  test_canonical_json.c  test_conformance.c  test_sha256.c  test_util.h
c/tools/: baion_canon_hash.c
conformance/: accept.jsonl  differential_probe.py  fuzz_agreement.py  gen_corpus.py  reject.jsonl  run_corpus_cli.py
cpp/: CMakeLists.txt
cpp/include/baion/: canonical_json.hpp  hash.hpp
cpp/src/: canonical_json.cpp  hash.cpp
cpp/tests/: CMakeLists.txt  test_canonical_json.cpp  test_conformance.cpp  test_hash.cpp
cpp/tools/: baion_canon_hash.cpp
d/: dub.json
d/source/baionstd/: canonical_json.d  hash.d  package.d  types.d
d/tests/: conformance_test.d  runner.d
d/tools/: canon_hash_main.d
go/: canonical_json.go  canonical_json_test.go  conformance_test.go  go.mod  hash_test.go
go/cmd/baion_canon_hash/: main.go
haskell/: LICENSE  baionstd-public.cabal  cabal.project.freeze
haskell/app/: Main.hs
haskell/src/Baion/: STD.hs
haskell/src/Baion/STD/: CanonicalJson.hs  Hash.hs
haskell/test/: ConformanceTest.hs  Main.hs
ocaml/: .gitignore  Makefile  dune-project
ocaml/cli/: baion_canon_hash.ml  dune
ocaml/lib/: canonical_json.ml  dune  hash.ml
ocaml/test/: conformance_test.ml  dune
rust/: Cargo.toml
rust/src/: canonical_json.rs  dup_check.rs  hash.rs  lib.rs  num_check.rs
rust/tests/: conformance_test.rs
